# dcm2itk

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build_deps.bat  calcsuv.cpp  config.h.in  main.cpp  utils.cpp  utils.h
.github/workflows/: build-windows.yml
